# complexity-dev

./: .dockerignore  HetznerNotes.md  LICENSE  README.md  db.json  db.sqlite3  docker-compose.yml  dockerfile.dev  entrypoint.sh  pyproject.toml  requirements.txt
home/: views.py
main/: settings.py  urls.py
polls/: admin.py  factories.py  models.py  tests.py  urls.py  validation_views.py  views.py
polls/migrations/: 0001_initial.py  0002_topic_reference_link_vote_date_voted_and_more.py  0003_alter_subject_pub_date_alter_subjectlinks_pub_date_and_more.py  0004_topicowner.py  0005_vote_submitted.py  0006_vote_date_updated_alter_vote_date_voted.py  0007_subject_current_score.py  0008_ranking.py  0009_remove_vote_rankings_ranking_unique_vote_order.py  0010_topic_new_subjects_allowed_topic_publicly_visible_and_more.py  0011_permissionoptions_remove_topic_new_subjects_allowed_and_more.py  0012_remove_topicgroup_permissions_topicgrouppermission_and_more.py  0013_permissionset_remove_topicgroup_permissions_and_more.py  0014_remove_permissionset_description_and_more.py  0015_topicgroup_can_add_users_to_group_and_more.py  0016_remove_topicgroup_permission_sets_and_more.py  0017_delete_topicgrouppermission.py  0018_delete_permissionoptions.py  0019_topic_owner.py  0020_remove_topic_unique_topic_text_lower_and_more.py  0021_topic_promoted.py
static/bundles/: bundle.js
static/css/: login-modal.css  styles--newtwist.css  styles.css
templates/: base.html
user_app/: admin.py  factories.py  forms.py  models.py  urls.py  validation_views.py  views.py
utils/: timeit.py
(+44 files in other folders)
