[project]
name = "dev-difficulty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.6.12",
    "django>=5.1.4",
    "django-browser-reload>=1.17.0",
    "django-debug-toolbar>=5.0.1",
    "django-extensions>=3.2.3",
    "django-guardian>=2.4.0",
    "django-htmx>=1.21.0",
    "django-improved-user[factory]>=2.1.0",
    "django-post-office>=3.9.1",
    "factory-boy>=3.3.1",
    "psycopg2-binary>=2.9.10",
]
